kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-test
  namespace: api-test-namespace-dev
  labels:
    app: api-test
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-test
  template:
    metadata:
      labels:
        app: api-test
    spec:
      containers:
        - name: api-test
          image: thaleseduardo/teste-go
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 4
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
