kubernetes/postgresql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-h
  namespace: api-test-namespace-dev
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  clusterIP: None
  selector:
    app: postgresql
