kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-test-service
  namespace: api-test-namespace-dev
spec:
  type: ClusterIP
  selector:
    app: api-test
  ports:
    - name: http-web
      port: 8000
      targetPort: 3000
      protocol: TCP
