kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress-gateway-k3s
  namespace: api-test-namespace-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*"
